@startuml
'https://plantuml.com/class-diagram

Interface UserInterface{
getName()
getAge():int
setBirthday(Date)
getBirthDay():date
setAdresss(Adress)
getAddress:adress
setProfileImage(Image)
getProfileImage():Image
 UploadMedia(Media);
 getUploadedMedia():arrayList;
createAlbum(string)
getAlbums():arrayList
addImageToAlbum(Image, Album)
addFriend(User)
}

Class User{
name:String
birthday:Date
adress:Adress
profileImage:File
age:Int
uploadedImages:arrayList
albumList:arrayList
Friends:arraylist
getTimeLine(User requester)
changeTimeline();
}

Interface Media{
getDate:date
}
class Image{
image:File
timestamp:date
}
class Music{
music:File
timestamp:date
}
class Video{
video:File
timestamp:date
}
class Album{
images: arrayList
title: string
user: User
album(User,title)
addImage(Image, User)

setImages(Image)

}
class Adress{
street:String
plz:(int)
city:string
country:string
Adress(street,plz,country,city)
}

Class UserManger{
registerUser(string)
findUserByName()
getAllUser()
}

Interface TimeLineInterface{
getTimeLine()
}

class TimeLineAll Implements TimeLineInterface{
user:User
getTimeLine(User requester)
}

class TimeLineFriends Implements TimeLineInterface{
user:User


getTimeLine(User requester)
}
Media <|--  Image
Media <|--  Video
Media <|--  Music
Adress --o User
TimeLineInterface --o User
Album  --* User
UserInterface <|-- User





@enduml